--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "tailwindcss -i ./src/index.css -o ./public/output.css --watch"
+    "dev": "tailwindcss -i ./src/index.css -o ./public/output.css --watch",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "jest": "^29.7.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-debug-screens": "^2.2.1"
   }
