--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "main": "index.js",
   "scripts": {
     "dev": "tailwindcss -i ./src/index.css -o ./public/output.css --watch",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@eslint/js": "^9.8.0",
+    "eslint": "^9.8.0",
+    "globals": "^15.9.0",
     "jest": "^29.7.0",
     "tailwindcss": "^3.4.7",
     "tailwindcss-debug-screens": "^2.2.1"
