--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "eslint": "^9.8.0",
     "globals": "^15.9.0",
     "jest": "^29.7.0",
+    "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.7.1",
     "tailwindcss": "^3.4.7",
     "tailwindcss-debug-screens": "^2.2.1"
   }
